
2016/05/31 - Version 1.8.4 - various fixes related mostly to multiple files
                processing.

2016/06/01 - Version 1.8.5 - much faster start time when recursive grep is not
                needed.

2016/06/05 - Version 1.8.6 - minor bug fixes and docs updates.

2016/06/26 - Version 1.8.7 - added option '-n' to print line numbers,
                file names and line numbers can now be colorized by setting of
                    an environment variable HL_LOCATION.
                Highlight.pm version 1.5 - ignore zero-length matches.

2016/06/27 - Version 1.8.8 - added option '-c' to print context lines around
                matches.

2016/06/28 - Version 1.8.9 - fixes in context lines processing

2016/07/14 - Version 1.9.0 - allow natural Unicode symbols in input patterns
                when option '-u' is set. Support for granular snippet files to
                help hl start faster.

2016/07/21 - Version 1.9.1 - significant speed optimization in the grep mode.
                Highlight.pm version 1.6 - added a new interface function.

2016/07/21 - Version 1.9.2 - version bump after Highlight.pm update.
                Highlight.pm version 1.7 - fixes in default color mode.

2016/07/22 - Version 1.9.3 - expensive Process() calls otimized.

2016/07/22 - Version 1.9.4 - optimization: always pre-check that line matches.
                Highlight.pm version 1.8 - minor cleanup.

2018/03/29 - Version 2.0.0 - fixed color tags offsets at ends of lines
                with support for "\r\n" line endings.

2018/03/30 - Version 2.0.1 - do not pass newlines from hl to the module part.

2018/04/01 - Version 2.0.2 - better treatment of the trailing highlight options
                not followed by a pattern.

2018/05/20 - Version 2.0.3 - added new global option '-f' to build the file list
                from the trailing arguments automatically when option '-' is not
                specified, fixed handling of option '0'.
