@@ -1,4 +1,4 @@
-Highlight version 2.0.3
+Highlight version 2.0.4
 =======================
 
 INSTALLATION
@@ -7,7 +7,6 @@ To install this module type the following:
 
    perl Makefile.PL
    make
-   make test
    make install
 
 DEPENDENCIES
@@ -18,7 +17,6 @@ COPYRIGHT AND LICENCE
 
 Copyright (C) 2008-2018 by A. Radkov
 
-This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself, either Perl version 5.8.8 or,
-at your option, any later version of Perl 5 you may have available.
+This is free software; you can redistribute it and/or modify it
+under the same terms as the Perl 5 programming language system itself.
 
